Remplissage balises html
Apres avoir fait la mise en page, je remplie les balises de ma structure html

--- a/home.html
+++ b/home.html
@@ -12,10 +12,26 @@
 <div class=container>
 <header><h1>Association des Musiciens Solitaires</h1></header>
 <nav>nav</nav> 
-<div id="intro">intro</div>
-<div id="contenu1">contenu1</div>
-<div id="contenu2">contenu2</div>   
-<footer>footer</footer>
+<div id="intro"><h3>Notre But</h3>
+    <P>Notre but est de réunir les musiciens qui jouent en solo chez eux. <br>
+        Comme beaucoup, vous jouer d’un instrument ou chanter tous seul chez vous. Vous voudriez partager cela avec d’autres musiciens, monter un groupe avec des personnes proches de chez vous, travailler un morceau en commun pour faire un bœuf lors de rencontres ou en cession live sur le net. <br>
+        Partager votre passion pour la musique, et ne jouer plus seul !
+        </P>
+</div>
+<div id="contenu1"><h5>Trouver des musiciens</h5>
+    <p>
+        Trouver, grâce à la géo-localisation, des musicien près de chez vous pour jouer. <br> 
+        Mettez vous d’accord sur un ou plusieurs morceaux à travailler, puis rencontrer vous afin de jouer partager voter musique ! 
+    </p>
+</div>
+<div id="contenu2"><h5>Rencontres Nationales Annuelle</h5>
+    <p>
+        Evénement ! <br>
+        Les rencontres annuelles vont avoir lieu, par villes. <br>
+        Retrouve les dates, les points de rendez vous, ainsi que tous les détails de ces rencontres !
+    </p>
+</div>   
+<footer><a href="contact.html">Contacter nous</a></footer>
 </div>
 
     <script src="js/jquery-3.6.0.min.js"></script>
