Ajout de la barre de navigation avec Bootstrap
J'ai ajouter une barre de navigation, avec l'aide d'un code bootstrap. Je l'ai personnaliser et rendu responsive

--- a/home.html
+++ b/home.html
@@ -11,7 +11,30 @@
 <body>
 <div class=container>
 <header><h1>Association des Musiciens Solitaires</h1></header>
-<nav>nav</nav> 
+<nav class="navbar navbar-expand {-sm|-md|-lg|-xl|-xxl} navbar-dark bg-dark">
+    <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link active" href="#">Acceuil </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Inscription</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Connexion</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Trouver des musiciens</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="pub.html">Rencontres Nationales Annuelle</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">F.A.Q.</a>
+      </li>
+    </ul>
+     </div>
+</nav> 
 <div id="intro"><h3>Notre But</h3>
     <P>Notre but est de réunir les musiciens qui jouent en solo chez eux. <br>
         Comme beaucoup, vous jouer d’un instrument ou chanter tous seul chez vous. Vous voudriez partager cela avec d’autres musiciens, monter un groupe avec des personnes proches de chez vous, travailler un morceau en commun pour faire un bœuf lors de rencontres ou en cession live sur le net. <br>
