remplissage balises html
J'ai rempli les balises html et j'ai rajouter la même barre de navigation que sur ma page d'accueil

--- a/event.html
+++ b/event.html
@@ -10,15 +10,89 @@
 </head>
 <body>
   
-  
+  <!-- div container pour display grid, responsive via @média -->
 <div class="container">
+
 <header><h1>Rencontres Nationales Annuelle</h1></header>
-<nav></nav>
-  <div id="contenu1"><h5>Paris</h5> </div>
-  <div id="contenu2"><h5>Lille</h5></div>
-  <div id="contenu3"><h5>Bordeaux</h5></div>
-  <div id="contenu4"><h5>Lyon</h5></div>
-<footer>footer</footer>
+
+<!-- Barre de navigation responsive avec Bootstrap -->
+<nav class="navbar navbar-expand {-sm|-md|-lg|-xl|-xxl} navbar-dark bg-dark">
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="home.html">Acceuil </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Inscription</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Connexion</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Trouver des musiciens</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="event.html">Rencontres Nationales Annuelle</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">F.A.Q.</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+<div id="contenu1"><h5>Paris</h5>
+    <img src="img/paris.jpg" alt="">
+    <p>
+        <ul>
+            <ol>Samedi 25 Juin 2022</ol>
+            <ol>RDV 17H Olympic Café 20 Rue Léon 75018 Paris</ol>
+            <ol>Instruments sur place : Batterie, guitares, basses, clavier</ol>
+        </ul>   
+        <p>La salle à été privatiser nous pourrons jouer jusqu'à 22H. Il n'y aura pas de public éxterieur mais on compte sur vous pour venir accompagner !</p>
+    </p>
+    <a href="#">Inscrivez-vous</a> 
+</div>
+
+<div id="contenu2"><h5>Lille</h5>
+    <img src="img/lille.jpg" alt="">
+    <p>
+        <ul>
+            <ol>Dimanche 26 Juin 2022</ol>
+            <ol>RDV 17H Le Musical 59 Rue de Fler 59000 Lille</ol>
+            <ol>Instruments sur place : Batterie, guitares, basses, contre-basse, accordeon, clavier</ol>
+        </ul>
+        <p>La salle à été privatiser nous pourrons jouer jusqu'à 23H. Il n'y aura pas de public éxterieur mais on compte sur vous pour venir accompagner !</p>   
+    </p>
+    <a href="#">Inscrivez-vous</a>
+</div>
+
+<div id="contenu3"><h5>Bordeaux</h5>
+    <img src="img/bordeaux.jpg" alt="">
+    <p>
+        <ul>
+            <ol>Samedi 02 Juillet 2022</ol>
+            <ol>RDV 17h Café des Moines 12 Rue des Menuts 33000 Bordeaux</ol>
+            <ol>Instruments sur place : Batterie, guitares, basses, clavier, trompette</ol>
+        </ul>  
+        <p>La salle à été privatiser nous pourrons jouer jusqu'à 22H. Il n'y aura pas de public éxterieur mais on compte sur vous pour venir accompagner !</p> 
+    </p>
+    <a href="#">Inscrivez-vous</a>
+</div>
+
+<div id="contenu4"><h5>Lyon</h5>
+    <img src="img/lyon.jpg" alt="">
+    <p>
+        <ul>
+            <ol>Dimanche 03 Juillet 2022</ol>
+            <ol>RDV 17h Les Valseuses 1 Rue Chappet 69001 Lyon</ol>
+            <ol>Instruments sur place : Batterie, guitares, basses, clavier</ol>
+        </ul> 
+        <p>La salle à été privatiser nous pourrons jouer jusqu'à 21H. Il n'y aura pas de public éxterieur mais on compte sur vous pour venir accompagner !</p>
+     </p> 
+     <a href="#">Inscrivez-vous</a>
+    </div>
+    <footer>Avec la participation du : <img src="img/idf.png" alt=""> <img src="img/logo lille.jpg" alt=""> <img src="img/aquitaine.png" alt=""> <img src="img/ara.png" alt=""> </footer>
 </div>
 
  <script src="js/jquery-3.6.0.min.js"></script> 
