--- a/home.html
+++ b/home.html
@@ -5,14 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Association des Musiciens Solitaires</title>
+    <!-- Mise en avant référencement -->
+    <meta name="description" content="Site de rassemblement pour les musiciens. Partager votre passion pour la musique. Venez participer aux rencontres annuelles.">
+    <meta name="keywords" content="association, musique, rencontres">
+    <meta name="robots" content="index">
+    <!-- CSS Bootstrap -->
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <!-- Mon CSS -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+<!-- div container pour display grid, responsive via @média -->
 <div class=container>
+
 <header><h1>Association des Musiciens Solitaires</h1></header>
+<!-- Barre de navigation responsive avec Bootstrap -->
 <nav class="navbar navbar-expand {-sm|-md|-lg|-xl|-xxl} navbar-dark bg-dark">
-    <div class="collapse navbar-collapse" id="navbarNav">
+  <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link active" href="#">Acceuil </a>
@@ -27,36 +36,42 @@
         <a class="nav-link" href="#">Trouver des musiciens</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="pub.html">Rencontres Nationales Annuelle</a>
+        <a class="nav-link" href="event.html">Rencontres Nationales Annuelle</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">F.A.Q.</a>
       </li>
     </ul>
-     </div>
-</nav> 
+  </div>
+</nav>
+
 <div id="intro"><h3>Notre But</h3>
-    <P>Notre but est de réunir les musiciens qui jouent en solo chez eux. <br>
-        Comme beaucoup, vous jouer d’un instrument ou chanter tous seul chez vous. Vous voudriez partager cela avec d’autres musiciens, monter un groupe avec des personnes proches de chez vous, travailler un morceau en commun pour faire un bœuf lors de rencontres ou en cession live sur le net. <br>
-        Partager votre passion pour la musique, et ne jouer plus seul !
-        </P>
-</div>
-<div id="contenu1"><h5>Trouver des musiciens</h5>
-    <p>
-        Trouver, grâce à la géo-localisation, des musicien près de chez vous pour jouer. <br> 
-        Mettez vous d’accord sur un ou plusieurs morceaux à travailler, puis rencontrer vous afin de jouer partager voter musique ! 
-    </p>
-</div>
-<div id="contenu2"><h5>Rencontres Nationales Annuelle</h5>
-    <p>
-        Evénement ! <br>
-        Les rencontres annuelles vont avoir lieu, par villes. <br>
-        Retrouve les dates, les points de rendez vous, ainsi que tous les détails de ces rencontres !
-    </p>
-</div>   
-<footer><a href="contact.html">Contacter nous</a></footer>
+  <P>Notre but est de réunir les musiciens qui jouent en solo chez eux. <br>
+      Comme beaucoup, vous jouer d’un instrument ou chanter tous seul chez vous. Vous voudriez partager cela avec d’autres musiciens, monter un groupe avec des personnes proches de chez vous, travailler un morceau en commun pour faire un bœuf lors de rencontres ou en cession live sur le net. <br>
+      Partager votre passion pour la musique, et ne jouer plus seul !
+      </P>
 </div>
 
+<!-- Article -->
+<div id="contenu1"><h5>Trouver des musiciens</h5>
+  <p>
+      Trouver, grâce à la géo-localisation, des musicien près de chez vous pour jouer. <br> 
+      Mettez vous d’accord sur un ou plusieurs morceaux à travailler, puis rencontrer vous afin de jouer partager voter musique ! 
+  </p>
+</div>
+
+<!-- Article -->
+<div id="contenu2"><h5>Rencontres Nationales Annuelle</h5>
+  <p>
+      Evénement ! <br>
+      Les rencontres annuelles vont avoir lieu, par villes. <br>
+      Retrouve les dates, les points de rendez vous, ainsi que tous les détails de ces rencontres !
+  </p>
+  </div>
+    
+<footer><a href="contact.html">Contacter nous</a></footer>
+
+</div>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
