--- a/event.html
+++ b/event.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Pour référencement -->
+    <meta name="description" content="Rencontres Annuelles.Paris.Lille.Bordeaux.Lyon">
+    <meta name="keywords" content="rencontre, annuelle, paris, lille, bordeaux, lyon">
+    <meta name="robots" content="index">
+    <!-- CSS Bootstrap -->
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <!-- Mon CSS -->
     <link rel="stylesheet" href="css/pub.css">
     <title>Rencontres Annuelles</title>
 </head>
