--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,18 @@
 </head>
 <body>
     <div class=container>
-    <header><h2>Contact</h2></header>
+    <header><h2>Nous Contacter</h2></header>
 
-        <form>formulaire contact</form>
+        <form>
+            <div class="inputs">
+                <input type="text" placeholder="Nom"><br>
+                <input type="email" placeholder="Email"><br>
+                <textarea name="message" id="" cols="50" rows="10" placeholder="votre messsage"></textarea>
+             </div>
+             <div align="center">
+                 <button type="submit">Envoyer</button>
+             </div>
+            </form>
         <footer><a href="home.html">Retour à l'Acceuil</a></footer>
     </div>
     <script src="js/jquery-3.6.0.min.js"></script>
