--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- CSS Bootstrap -->
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <!-- Mon CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <!-- div container pour display grid, responsive via @média -->
