--- a/event.html
+++ b/event.html
@@ -11,7 +11,7 @@
     <!-- CSS Bootstrap -->
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <!-- Mon CSS -->
-    <link rel="stylesheet" href="css/pub.css">
+    <link rel="stylesheet" href="pub.css">
     <title>Rencontres Annuelles</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="home.html">Acceuil </a>
+          <a class="nav-link" href="index.html">Acceuil </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Inscription</a>
