--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulaire de contact</title>
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
     <div class=container>
@@ -22,7 +22,7 @@
                  <button type="submit">Envoyer</button>
              </div>
             </form>
-        <footer><a href="home.html">Retour à l'Acceuil</a></footer>
+        <footer><a href="index.html">Retour à l'Acceuil</a></footer>
     </div>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
