--- a/event.html
+++ b/event.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="rencontre, annuelle, paris, lille, bordeaux, lyon">
     <meta name="robots" content="index">
     <!-- CSS Bootstrap -->
-    <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <!-- Mon CSS -->
     <link rel="stylesheet" href="pub.css">
     <title>Rencontres Annuelles</title>
@@ -101,7 +101,7 @@
     <footer>Avec la participation du : <img src="img/idf.png" alt=""> <img src="img/logo lille.jpg" alt=""> <img src="img/aquitaine.png" alt=""> <img src="img/ara.png" alt=""> </footer>
 </div>
 
- <script src="js/jquery-3.6.0.min.js"></script> 
- <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>  
+ <script src="jquery-3.6.0.min.js"></script> 
+ <script src="bootstrap.bundle.min.js"></script>  
 </body>
 </html>
