--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="association, musique, rencontres">
     <meta name="robots" content="index">
     <!-- CSS Bootstrap -->
-    <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <!-- Mon CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -72,8 +72,8 @@
 <footer><a href="contact.html">Contacter nous</a></footer>
 
 </div>
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="jquery-3.6.0.min.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
