--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             <div class="inputs">
                 <input type="text" placeholder="Nom"><br>
                 <input type="email" placeholder="Email"><br>
-                <textarea name="message" id="" cols="50" rows="10" placeholder="votre messsage"></textarea>
+                <textarea name="message" id="" cols="50" rows="10" placeholder="Votre messsage"></textarea>
              </div>
              <div align="center">
                  <button type="submit">Envoyer</button>
