--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="#">Acceuil </a>
+        <a class="nav-link active" href="#">Accueil </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Inscription</a>
