--- a/event.html
+++ b/event.html
@@ -26,7 +26,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Acceuil </a>
+          <a class="nav-link" href="index.html">Accueil </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Inscription</a>
