--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
                  <button type="submit">Envoyer</button>
              </div>
             </form>
-        <footer><a href="index.html">Retour à l'Acceuil</a></footer>
+        <footer><a href="index.html">Retour à l'Accueil</a></footer>
     </div>
     <script src="jquery-3.6.0.min.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
