--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a class="nav-link" href="#">Trouver des musiciens</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="event.html">Rencontres Nationales Annuelle</a>
+        <a class="nav-link" href="event.html">Rencontres Nationales Annuelles</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">F.A.Q.</a>
@@ -61,7 +61,7 @@
 </div>
 
 <!-- Article -->
-<div id="contenu2"><h5>Rencontres Nationales Annuelle</h5>
+<div id="contenu2"><h5>Rencontres Nationales Annuelles</h5>
   <p>
       Evénement ! <br>
       Les rencontres annuelles vont avoir lieu, par villes. <br>
