--- a/event.html
+++ b/event.html
@@ -38,7 +38,7 @@
           <a class="nav-link" href="#">Trouver des musiciens</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="event.html">Rencontres Nationales Annuelle</a>
+          <a class="nav-link active" href="event.html">Rencontres Nationales Annuelles</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">F.A.Q.</a>
