--- a/event.html
+++ b/event.html
@@ -19,7 +19,7 @@
   <!-- div container pour display grid, responsive via @média -->
 <div class="container">
 
-<header><h1>Rencontres Nationales Annuelle</h1></header>
+<header><h1>Rencontres Nationales Annuelles</h1></header>
 
 <!-- Barre de navigation responsive avec Bootstrap -->
 <nav class="navbar navbar-expand {-sm|-md|-lg|-xl|-xxl} navbar-dark bg-dark">
